main.css
.full-height {
    height: 100%;
}

html {
    overflow: hidden;
}

.infobox {
    position: absolute;
    top: 20px;
    left: 140px;
    z-index: 10;
    font-family: tahoma, sans-serif;
    background-color: white;
    padding: 5px;
}

.infobox > .title {
    font-weight: bold;
    font-size: large;
}

.infobox > .medium, .dimensions {
    font-size: small;
    font-weight: lighter;
}

.infobox > .subtitle {
    font-style: italic;
}

.slide > span {
    font-size: 14pt;
    position: absolute;
    left: 20px;
    z-index: 10;
    color: gray;
    cursor: pointer;
}

.slide > span:hover {
    color: black;
    font-weight: bold;
}

.navicon {
    font-size: 14pt;
    position: absolute;
    left: 20px;
    z-index: 10;
    color: gray;
    cursor: pointer;
}

.navicon:hover {
    color: black;
    font-weight: bold;
}

.navicon-highlight {
    color: black;
    font-weight: bold;
}

.aboutbox {
    position: absolute;
    z-index: 9;
    left: 20px;
    bottom: 20px;
    font-family: sans-serif;
    padding-left: 100px;
    padding-bottom: 5px;
    padding-right: 5px;
    background-color: white;
}

.aboutbox > .about-name {
    font-weight: bold;
    font-size: 16pt;
}

.aboutbox > .about-footer {
    color: grey;
}

.aboutbox > .about-footer > a {
    color: grey;
    text-decoration: underline;
}

.chooser {
    position: absolute;
    top: 0;
    left: 0px;
    padding-left: 100px;
    /*width: 470px;*/
    width: auto;
    height: 100%;
    background-color: white;
    box-shadow: 5px 0px 5px white;
    overflow-y: auto;
    overflow-x: hidden;
}

.image-thumbnail {
    cursor: pointer;
    box-shadow: 2px 2px 2px gray;
}

.selected {
    
}

.category {
    padding-top: 20px;
}

.category .category-title {
    font-family: sans-serif;
    font-size: 16pt;
    width: 100%;
    text-align: center;
}

.category > .category-thumbnails {
    width: 100%;
    height: 100%;
    border-spacing: 20px;
    padding: 20px;
    border: none;
    border-collapse: separate;
}

.thumbnail-cell {
    border: none;
}

.nodisplay {
    display: none;
}

.img-carousel {
    background-color: white;
    height: 100%;
}

.carousel-control:hover {
    cursor: pointer;
}

.carousel-inner {
    height: 100%;
}

.carousel-inner > .item {
    height: 100%;
}

.load-screen {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: white;
    z-index: 10000;
    background-image: url("/ajax-loader.gif");
    background-repeat: no-repeat;
    background-position: center;
}

.hide {
    display: none;
}

